# bintool-tauri

./: .gitignore  package.json  vite.config.ts
.github/workflow/: build-and-release.yml
.github/workflows/: build-and-release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  tauri_cmd.rs
src-tauri/src/utils/: bollard_utils.rs  default_utils.rs  gpt_sovits_utils.rs  mod.rs
src/components/: bintoolInput.vue  gpt_sovits_model.vue  show_database.vue
src/novel/: novel.vue
src/utils/: defaultUtils.ts  novelUtils.ts  yt_dlp_uitls.ts
